syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrapper.proto";

package upload;

service UploadService {
    rpc uploadImage(FileRequest) returns (FileResponse) {}
}

message FileRequest {
    string mimetype = 1;
    bytes buffer = 2;
}

message FileResponse {
    string url = 1;
}